# gemma-gen

./: CONTRIBUTING.md  LICENSE  README.md  attention_visualization_simple.py  pyproject.toml  requirements.txt
assets/: prompts.txt
configs/data/: ti_pairs.yaml
configs/model/: tuna_2_pixel_7b.yaml  tuna_2_pixel_gemma_12b.yaml
configs/predict/: edit.yaml  t2i.yaml  t2v_2b.yaml  t2v_pixel_gemma.yaml
configs/predict/data/: edit_pairs.yaml
configs/predict/model/: tuna_7b.yaml
configs/pretrained/siglip2-so400m-patch16-384/: config.json
configs/train/: train.yaml  train_gemma.yaml  video_t2v.yaml  video_t2v_pixel_gemma.yaml
configs/train/data/: mmu_pairs.yaml  text_only.yaml
configs/train/model/: tuna_2b.yaml  tuna_2r_pixel_7b.yaml
data_examples/: edit_pairs.jsonl  mmu_pairs.jsonl  text_only.jsonl  ti_pairs.jsonl  video_pairs.jsonl
lmms-eval/: README.md  pyproject.toml  run_eval_none_encoder_7b.sh  run_eval_siglip_pixel_7b.sh  run_eval_vae_2b.sh  setup.py
lmms-eval/lmms_eval/: __main__.py  evaluator.py  evaluator_utils.py  logging_utils.py  protocol.py  utils.py
lmms-eval/lmms_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lmms-eval/lmms_eval/api/: filter.py  group.py  instance.py  metrics.py  model.py  registry.py  samplers.py  task.py
lmms-eval/lmms_eval/caching/: cache.py
lmms-eval/lmms_eval/filters/: __init__.py  decontamination.py  extraction.py  selection.py  transformation.py
lmms-eval/lmms_eval/llm_judge/: __init__.py  base.py  factory.py  prompt.py  protocol.py  utils.py
lmms-eval/lmms_eval/loggers/: __init__.py  evaluation_tracker.py  utils.py  wandb_logger.py
lmms-eval/lmms_eval/mcp/: __init__.py  client.py
lmms-eval/lmms_eval/models/: BUCK  __init__.py
lmms-eval/lmms_eval/tasks/: __init__.py
scripts/: setup_uv.sh
scripts/launch/: _run.sh  predict.sh  train_multi_node.sh  train_single_node.sh
tuna/: README.md  __init__.py
tuna/data/: __init__.py  multiresolution.py  tokenize_utils.py  transforms.py  weighted_sampler.py
tuna/data/datasets/: __init__.py  edit_dataset.py  pixel_video_dataset.py  ti_dataset.py  video_dataset.py
tuna/inference/: __init__.py  checkpoint_loader.py  runner.py
tuna/models/: _common.py  _inner_base.py  _wrapper_base.py  gemma_omni_attn.py  jit_utils.py  misc.py  omni_attention.py  pixelrepa.py  tuna.py  tuna_2_pixel.py  tuna_2_pixel_gemma.py  tuna_2r_pixel.py
tuna/models/backbones/: modules.py  (+2 more)
tuna/pipelines/: __init__.py  _common.py  _pipeline_base.py  editing.py  generation.py  reconstruction.py  tuna_2_pixel_ar_video_pipeline.py  tuna_2_pixel_pipeline.py  tuna_2r_pixel_pipeline.py  tuna_pipeline.py  understanding.py
tuna/scripts/: __init__.py  eval_image.py  eval_video.py  merge_fsdp_ckpt.py  predict.py  train.py
tuna/training/: __init__.py  fsdp_utils.py  mean_flow_distill.py  pred_unit.py  trainer.py  unit.py
(+443 files in other folders)
